2006-06-20 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j65-UNSTABLE

 * Bugfix for b64 ;)

2006-06-20 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j64-UNSTABLE

 * Accesskey Changes:
	- Additional param to getIconText() to set a stickyAlt, regardless the iconmode
	- New function getAccessKey($text)
	- New function removeAccessKey($text)
	- make_separator() now works with accesskeys
	- array_sort now doesnt fall over accesskeys

 * Accesskey Use in
	includes/definitions/albumProperties.php
	delete_photo.php
	lib/albumItem.php
	layout/navigator.inc
	layout/navphoto.inc

 * Change: Use of LoginLogoutButton in view_photo.php

 * NEW: function galleryIconLink($url, $icon, $text, $iconMode = '', $attrList = array())
 
2006-06-19 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j63-UNSTABLE

 * Change: Reworked checkVersions().
   It not returns one array and the calling procedure needs to figure out what to do.

 * Change: Adjust check_gallery_versions() and setup/check_versions.php to above changes.

 * Change: Reenabled verbose output of jhead in util.php.

 * Cleanups in classes/Album.php

 * Removed OLD function includeTemplate()

 * Nicify of some files.

2006-06-19 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j62-UNSTABLE

 * Use of true/false instead 0 / 1
	view_photo_properties.php
	classes/AlbumItem.php

2006-06-19 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j61-UNSTABLE

 * Fix: init_language() is not called redundant in init.php

 * Change: When user updates his language, the parent page is reloaded with the new language.

 * PHP5 fix:
   In classes/Mail/htmlMimeMail.php, ecard_form.php was $HTTP_SERVER_VARS used,
   which is not longer present in PHP5


 * Added svn IDs:
	js/sectionTabs.js.php
	js/wz_tooltip.js
	js/wz_jsgraphics.js
	js/imagemap.js
	js/toggle.js
	js/fitToWindow.js.php
	templates/setup/im-netpbm-test.tpl

2006-06-16 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j60-UNSTABLE

 * Translation in Setup fix.

2006-06-16 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j59-UNSTABLE

 * CSS nicify.
