@@ -1,3 +1,9 @@
+2006-06-22 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j66-UNSTABLE
+
+ * NEW: Functionality to recreate all captions of an album (recursiv if wanted)
+
+ * New: Folder for popups
+
 2006-06-20 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j65-UNSTABLE
 
  * Bugfix for b64 ;)
